front-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: antcv
spec:
  replicas: 1
  selector:
    matchLabels:
      app: antcv
  template:
    metadata:
      name: antcv
      labels:
        app: antcv
    spec:
      containers:
        - name: antcv
          image: xtaoistzz8t/antcv:latest
---
apiVersion: v1
kind: Service
metadata:
  name: antcv
spec:
  type: NodePort
  selector:
    app: antcv
  ports:
    - port: 3000
      targetPort: 3000
      nodePort: 30000
