gateway-class.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: antcv
  annotations:
    konghq.com/strip-path: 'true'
spec:
  ingressClassName: kong
  rules:
  - host: www.antcv.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: antcv
            port: 
              number: 3000
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: antcv-ssl
  annotations:
    konghq.com/strip-path: 'true'
spec:
  ingressClassName: kong
  tls:
  - hosts:
    - www.antcv.com
  rules:
  - host: www.antcv.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: antcv
            port: 
              number: 3000
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: bantcv
  annotations:
    konghq.com/strip-path: 'true'
spec:
  ingressClassName: kong
  rules:
  - host: www.bantcv.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: bantcv
            port: 
              number: 5000
